Agrego 2 div en la tercer seccion Faq

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -45,14 +45,18 @@
         </section>
 
         <section>
+            <div>
             <h3>¿Pregunta 3?</h3> <!--acordeon - se despliega la respuesta-->
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim laboriosam optio, deleniti asperiores
             dolorem similique sunt facere minima rerum adipisci debitis alias eaque dolores aperiam porro quo et
             quidem cumque.</p>
+        </div>
+        <div>
             <h3>¿Pregunta 4?</h3> <!--acordeon - se despliega la respuesta-->
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim laboriosam optio, deleniti asperiores
             dolorem similique sunt facere minima rerum adipisci debitis alias eaque dolores aperiam porro quo et
             quidem cumque.</p>
+        </div>
         </section>
 
 
