agrego seccion faq con Boostrap

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -18,6 +18,7 @@
                     <li><a href="./tratamientos.html">Tratamientos</a></li>
                     <li><a href="faq.html">Faq</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
+                    <li><a href="faq2.html">Faq</a></li>
                 </ul>
             </nav>
     </header>
