Intento de Respnsive

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </nav>
     </header>
         <hr>
-        <section class="portadaInicio">
+        <section class="portadaInicio portadaGridAreas">
             <main>
-            <div>
-            <img src="assets/img/consultorio05.jpg" alt="consultorio odontológico">
+            <div class="fondoPortada">
+          <img src="assets/img/consultorio05.jpg" alt="consultorio odontológico">
             </div>
             <div>
             <h2><a href="./pages/nosotros.html">Sobre Nosotras</a></h2>
@@ -40,7 +40,7 @@
             </main>
         </section>
         <hr>
-        <section class="seccionDosInicio">
+        <section class="seccionDosInicio seccionDosGridAreas">
             <h2><a href="./pages/tratamientos.html">Tratamientos</a></h2>
             <ul>
                <li>
@@ -72,7 +72,7 @@
             </ul>
         </section>
         <hr>
-        <section class="seccionTresInicio">
+        <section class="seccionTresInicio seccionTresGridAreas">
             
             <h2><a href="./pages/contacto.html">Contacto</a></h2>
 
