--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -23,11 +23,11 @@
     </header>
         <hr>
         <main>
-            <section class="portadaContacto">
+            <section class="portadaContacto portadaGridAreas">
                 <!--imagen fondo-->
             </section>
         </main>
-        <section>
+        <section class="seccionDosGridAreas">
             <h2>Contacto</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde, atque deserunt eaque tenetur
             blanditiis voluptatibus. Eligendi molestias quisquam numquam aspernatur, ullam totam provident magnam
@@ -44,7 +44,7 @@
 
         </section>
 
-        <section>
+        <section class="seccionTresGridAreas">
             <h2><a href="./pages/contacto.html">Contacto</a></h2>
             <div>
                 <ul>
