--- a/pages/faq.html
+++ b/pages/faq.html
@@ -24,11 +24,11 @@
         <hr>
 
         <main>
-            <section class="portadaFaq">
+            <section class="portadaFaq portadaGridAreas">
                 <!--imagen fondo-->
             </section>
         </main>
-        <section class="seccionDosFaq">
+        <section class="seccionDosFaq seccionDosGridAreas">
             <h2>Preguntas frecuentes</h2> 
             <div>    
             <h3>¿Pregunta 1?</h3> <!--acordeon - se despliega la respuesta-->
@@ -44,7 +44,7 @@
         </div>    
         </section>
 
-        <section>
+        <section class="seccionTresGridAreas">
             <h3>¿Pregunta 3?</h3> <!--acordeon - se despliega la respuesta-->
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim laboriosam optio, deleniti asperiores
             dolorem similique sunt facere minima rerum adipisci debitis alias eaque dolores aperiam porro quo et
