--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -23,11 +23,11 @@
     </header>
         <hr>
         <main>
-            <section class="portadaNosotros">
+            <section class="portadaNosotros portadaGridAreas">
                 <!--carrusel img consultorio-->
             </section>
         </main>
-        <section class="seccionDosNosotros">
+        <section class="seccionDosNosotros seccionDosGridAreas">
             <h2>Sobre Nosotras</h2>
 
             <div class="presentacionOdontologa">
@@ -50,7 +50,7 @@
             </div>
         </section>
 
-        <section class="galeriaNosotros">
+        <section class="galeriaNosotros seccionTresGridAreas">
 
         <h2>Galeria</h2>
 
