--- a/pages/tratamientos.html
+++ b/pages/tratamientos.html
@@ -23,12 +23,12 @@
     </header>
         <hr>
         <main>
-            <section class="portadaTratamientos">
+            <section class="portadaTratamientos portadaGridAreas">
                 <!--imagen fondo-->
             </section>
         </main>
 
-        <section class="seccionDosTratamientos">
+        <section class="seccionDosTratamientos seccionDosGridAreas">
             <h2>Tratamientos</h2>
             <ul>
                 <li>
@@ -63,7 +63,7 @@
                 </li>
             </ul>   
         </section>
-        <section class="seccionTresTratamientos">
+        <section class="seccionTresTratamientos seccionTresGridAreas">
             <ul>
                 <li>
                     <h3>Estética y <br>Blanqueaminto </h3>
