--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apex Odontología</title>
+    <title>Apex Odontología | Prevencion, Estetica y Rehabilitacion </title>
     <link rel="shortcut icon" href="assets/img/logo.ico" type="image/x-icon">
+    <meta name="description" content="Atencion Particular.
+    Prevencion Estetica y Rehabilitacion.
+    Blanqueamiento, Tratamientos de conducto, Cirugía, Caries, Limpieza, Prótesis">
+    <meta name="keywords" content="Blanqueamiento, Tratamientos de conducto, Cirugía, Caries, Limpieza, Prótesis, Dentista, Odontología, dientes, Consultorio">
+    <meta property:'og:type' content="Web site">
+    <meta property:'og:title' content="Apex Odontología | Prevencion, Estetica y Rehabilitacion">
+    <meta property:'og:url' content="">
+    <meta property:'og:image' content="./assets/img/logo.ico">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="encabezado">
-        <h1><a href="index.html"><img class="encabezadoLogo" src="assets/img/logo.png" alt="logo apex"></a></h1>
+        <div class="logo"><a href="index.html"><img class="encabezadoLogo" src="assets/img/logo.png" alt="logo apex"></a></div>
             <nav>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
@@ -28,7 +36,7 @@
           <img src="assets/img/consultorio05.jpg" alt="consultorio odontológico">
             </div>
             <div>
-            <h2><a href="./pages/nosotros.html">Sobre Nosotras</a></h2>
+            <h1><a href="./pages/nosotros.html">Apex Odontología Integral</a></h1>
                               
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur debitis dolores explicabo suscipit aliquid
             praesentium assumenda. Quibusdam sapiente provident minima voluptates itaque corporis vitae quos nulla, sed
