--- a/pages/faq.html
+++ b/pages/faq.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apex Odontología</title>
+    <title>Apex Odontología | Preguntas Frecuentes</title>
     <link rel="shortcut icon" href="../assets/img/logo.ico" type="image/x-icon">
+    <meta name="description" content="Atencion Particular.
+    Prevencion Estetica y Rehabilitacion.
+    Blanqueamiento, Tratamientos de conducto, Cirugía, Caries, Limpieza, Prótesis">
+    <meta name="keywords" content="Blanqueamiento, Tratamientos de conducto, Cirugía, Caries, Limpieza, Prótesis, Dentista, Odontología, dientes, Consultorio">
+
+    <meta name="keywords" content="Blanqueamiento, Tratamientos de conducto, Cirugía, Caries, Limpieza, Prótesis, Dentista, Odontología, dientes, Consultorio">
+    <meta property:'og:type' content="Web site">
+    <meta property:'og:title' content="Apex Odontología | Prevencion, Estetica y Rehabilitacion">
+    <meta property:'og:url' content="">
+    <meta property:'og:image' content="../assets/img/logo.ico">
+
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header class="encabezado">
-        <h1><a href="../index.html"><img class="encabezadoLogo" src="../assets/img/logo.png" alt="logo apex"></a></h1>
+        <div class="logo"><a href="../index.html"><img class="encabezadoLogo" src="../assets/img/logo.png" alt="logo apex"></a></div>
             <nav>
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
@@ -29,7 +40,7 @@
             </section>
         </main>
         <section class="seccionDosFaq seccionDosGridAreas">
-            <h2>Preguntas frecuentes</h2> 
+            <h1>Preguntas frecuentes</h1> 
             <div>    
             <h3>¿Pregunta 1?</h3> <!--acordeon - se despliega la respuesta-->
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim laboriosam optio, deleniti asperiores
