--- a/pages/tratamientos.html
+++ b/pages/tratamientos.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apex Odontología</title>
+    <title>Apex Odontología | Tratamientos </title>
     <link rel="shortcut icon" href="../assets/img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
+    <meta name="description" content="Atencion Particular.
+    Prevencion Estetica y Rehabilitacion.
+    Blanqueamiento, Tratamientos de conducto, Cirugía, Caries, Limpieza, Prótesis">
+    <meta name="keywords" content="Blanqueamiento, Tratamientos de conducto, Cirugía, Caries, Limpieza, Prótesis, Dentista, Odontología, dientes, Consultorio">
+
+    <meta name="keywords" content="Blanqueamiento, Tratamientos de conducto, Cirugía, Caries, Limpieza, Prótesis, Dentista, Odontología, dientes, Consultorio">
+    <meta property:'og:type' content="Web site">
+    <meta property:'og:title' content="Apex Odontología | Prevencion, Estetica y Rehabilitacion">
+    <meta property:'og:url' content="">
+    <meta property:'og:image' content="../assets/img/logo.ico">
+    
 </head>
 <body>
     <header class="encabezado">
-        <h1><a href="../index.html"><img class="encabezadoLogo" src="../assets/img/logo.png" alt="logo apex"></a></h1>
+        <div class="logo"><a href="../index.html"><img class="encabezadoLogo" src="../assets/img/logo.png" alt="logo apex"></a></div>
             <nav>
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
@@ -29,12 +40,12 @@
         </main>
 
         <section class="seccionDosTratamientos seccionDosGridAreas">
-            <h2>Tratamientos</h2>
+            <h1>Tratamientos</h1>
             <ul>
                 <li>
                     <div>
                         <!--Img-->
-                        <img src="../assets/img/caries-02.png" alt="">
+                        <img src="../assets/img/caries-02.png" alt="Caries">
                     </div>
                     <h3>Caries <br>Cirugía </h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum harum sequi asperiores minus
@@ -44,7 +55,7 @@
                 <li>
                     <div>
                         <!--Img-->
-                        <img src="../assets/img/tratamiento-conducto-02.png" alt="">
+                        <img src="../assets/img/tratamiento-conducto-02.png" alt="Tratamiento de conducto">
                     </div>
                     <h3>Tratamiento <br>de Conducto </h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum harum sequi asperiores minus
@@ -54,7 +65,7 @@
                 <li>
                     <div>
                         <!--Img-->
-                        <img src="../assets/img/limpieza-02.png" alt="">
+                        <img src="../assets/img/limpieza-02.png" alt="Limpieza periodontal">
                     </div>
                     <h3>Limpieza <br>Periodontal </h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum harum sequi asperiores minus
@@ -72,7 +83,7 @@
                     incidunt fugit aliquid numquam aspernatur culpa!</p>
                     <div>
                         <!--Img-->
-                        <img src="../assets/img/estetica-blanqueamiento-02.png" alt="">
+                        <img src="../assets/img/estetica-blanqueamiento-02.png" alt="Estetica y blanquiamiento">
                     </div>
                 </li>
                 <li>
@@ -83,7 +94,7 @@
                     incidunt fugit aliquid numquam aspernatur culpa!</p>
                     <div>
                         <!--Img-->
-                        <img src="../assets/img/cirugia-02.png" alt="">
+                        <img src="../assets/img/cirugia-02.png" alt="Extracciones">
                     </div>
                 </li>
                 <li>
@@ -94,7 +105,7 @@
                     incidunt fugit aliquid numquam aspernatur culpa!</p>
                     <div>
                         <!--Img-->
-                        <img src="../assets/img/protesis-fija-02.png" alt="">
+                        <img src="../assets/img/protesis-fija-02.png" alt="Protesis">
                     </div>
                 </li>
             </ul>
