Responsive ultimos detalles

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -61,11 +61,18 @@
             </p><!--info horario de respuesta/días de turnos/horarios-->
             </div>
             <div class="whatsapp">
-            <!--Logo Whatsapp-->
+            
+            <div>
+                <!--Logo Whatsapp-->
             <img src="../assets/img/whatsapp.png" alt="whatsapp">
-            <h3>Solicitá tu turno - 1167348113</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias delectus soluta culpa obcaecati excepturi neque tenetur illo doloremque fugiat maxime, iusto, explicabo unde facere architecto. Sapiente, nisi unde. Ratione, est.</p>
             </div>
+
+            <div>
+            <h3>Solicitá tu turno - 1167348113</h3>
+            <p>Molestias delectus soluta culpa obcaecati excepturi neque tenetur illo doloremque fugiat maxime, iusto, explicabo unde facere architecto.</p>
+            </div>
+            
+        </div>
         </div>
 
         </section>
