--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -77,28 +77,26 @@
 
         <section class="galeriaNosotros seccionTresGridAreas">
 
-        <h2>Galeria</h2>
+        <h2 class="tituloGaleriaGridArea">Galeria</h2>
 
-        <div>
-            <div>
+        <div class="galeria">
+            <div class="galeriaItem">
                 <img src="../assets/img/dentista-niño03.jpg" alt="Niño en el dentista">
             </div>
-            <div>
+            <div class="galeriaItem">
                 <img src="../assets/img/cirugia.jpg" alt="cirugia">
             </div>
-            <div>
+            <div class="galeriaItem">
                 <img src="../assets/img/consultorio03.jpg" alt="consultorio odontológico">
             </div>
-        </div>
-
-         <div>   
-            <div>
+         
+            <div class="galeriaItem">
                 <img src="../assets/img/odontologa-revisando02.jpg" alt="Odontologa revisando">
             </div>
-            <div>
+            <div class="galeriaItem">
                 <img src="../assets/img/consultorio04.jpg" alt="consultorio odontológico">
             </div>
-            <div>
+            <div class="galeriaItem">
                 <img src="../assets/img/dentista-niño.jpg" alt="dentista atendiendo el teléfono">
             </div>
         </div>  
