--- a/index.html
+++ b/index.html
@@ -40,12 +40,11 @@
             <div>
             <h1><a href="./pages/nosotros.html">Apex Odontología Integral</a></h1>
                               
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur debitis dolores explicabo suscipit aliquid
-            praesentium assumenda. Quibusdam sapiente provident minima voluptates itaque corporis vitae quos nulla, sed
-            quod, ad aut.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, laborum reprehenderit! Facilis ullam
-            debitis, saepe vero quia, magni itaque magnam culpa sit inventore voluptatum fugiat officiis, consequuntur
-            ea nostrum corrupti.</p>
+            <p>En Apex tenemos un enfoque integral y preventivo.
+                Recomendamos realizar controles periodicos, cada 6 meses, para detectar las patologias en sus etapas iniciales, y así evitar tratamiento mas complejos y costosos. Prevenir es la base de la salud bucal</p>
+            <p>Veni a tu consulta, realizamos diagnóstico clinico radiografico, y realizamos plan de tratamiento personalizado.
+                Atendemos niños y adultos.
+                🦷 Te esperamos.</p>
             </div>
             </main>
         </section>
@@ -55,7 +54,7 @@
             <ul>
                <li>
                 <img src="assets/img/caries-02.png" alt="caries">
-                <p>Caries <br>Cirugía </p>
+                <p>Arreglo  <br>de Caries </p>
                </li>
                <li>
                 <img src="assets/img/tratamiento-conducto-02.png" alt="tratamiento de conducto">
