--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -51,13 +51,10 @@
 
             <h2>Prevencion Estetica y Rehabilitación</h2>
 
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde, atque deserunt eaque tenetur
-            blanditiis voluptatibus. Eligendi molestias quisquam numquam aspernatur, ullam totam provident magnam
-            necessitatibus quo quidem, rerum aut. </p>
+            <p>La odontopediatría es una especialidad centrada en el estudio, tratamiento y cuidado de la salud bucodental de los más pequeños.
+            </p>
             <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolorum minus saepe omnis nemo eveniet
-            libero dolorem quasi aperiam ducimus quisquam distinctio, nobis, fugiat blanditiis, enim adipisci iusto at
-            error?
+                Realizamos la consulta de primera vez. En ella se hace la motivación, enseñanza de técnica de cepillado, diagnostico en caso de presencia de caries o defectos de mineralización del esmalte en alguna de las piezas. Y se realiza una aplicación de flúor.
             </p><!--info horario de respuesta/días de turnos/horarios-->
             </div>
             <div class="whatsapp">
@@ -69,7 +66,7 @@
 
             <div>
             <h3>Solicitá tu turno - 1167348113</h3>
-            <p>Molestias delectus soluta culpa obcaecati excepturi neque tenetur illo doloremque fugiat maxime, iusto, explicabo unde facere architecto.</p>
+            <p>Junto a los padres, se busca inculcarles buenos hábitos que les ayudarán a ir creciendo con una boca que no les dé demasiadas preocupaciones.</p>
             </div>
             
         </div>
