--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -49,11 +49,9 @@
             <div class="presentacionOdontologa">
 
                 <div>
-                <h2>Odontologa Agostina Sagaría</h2>
+                <h2>Odontóloga Agostina Sagaría</h2>
 
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam odio numquam, doloremque distinctio
-                reprehenderit, molestiae neque voluptatum, blanditiis at debitis beatae placeat nulla delectus recusandae
-                ducimus totam quos doloribus possimus!</p>
+                <p>Hola! Soy Agos, me recibí en el año 2019 , realicé la especialidad de Endodoncia e Implantes. Soy docente de la cátedra de cirugía II en la Facultad de Odontología de la UBA. Amo los perros, viajar y el chocolate, soy fan de Harry Potter 🧙‍♂️</p>
                 </div>
                 <div>
                 <img src="../assets/img/Odontologa01.png" alt="Odontologa">
@@ -62,11 +60,9 @@
 
             <div class="presentacionOdontologa">
                 <div>
-                <h2>Odontologa Pamela Pamela</h2>
+                <h2>Odontóloga Pamela Cadena</h2>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, excepturi quae reprehenderit alias
-                id adipisci eius vitae dolore aliquid saepe aspernatur tempora ea laborum delectus minus accusamus nisi
-                sunt! Id?</p>
+                <p>Buenas! Soy pame, odontóloga desde 2019 ,realicé la especialidad de ortodoncia y ortopedia.  Mientras estudiaba, trabaje de asistente dental .Tengo 2 conejos: rabito y antena, que son rescatados. Soy de escorpio y hago patín y acrobacia en tela.</p>
                 </div>
                 
                 <div>
