cambiando nombre a nino

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -77,7 +77,7 @@
 
         <div class="galeria">
             <div class="galeriaItem">
-                <img src="../assets/img/dentista-niño03.jpg" alt="Niño en el dentista">
+                <img src="../assets/img/dentista-nino03.jpg" alt="Niño en el dentista">
             </div>
             <div class="galeriaItem">
                 <img src="../assets/img/cirugia.jpg" alt="cirugia">
@@ -93,7 +93,7 @@
                 <img src="../assets/img/consultorio04.jpg" alt="consultorio odontológico">
             </div>
             <div class="galeriaItem">
-                <img src="../assets/img/dentista-niño.jpg" alt="dentista atendiendo el teléfono">
+                <img src="../assets/img/dentista-nino.jpg" alt="dentista atendiendo el teléfono">
             </div>
         </div>  
         </section>
